feat: modernize architecture, implement glance widget sync, and upgrade quant engine (Phases 1-4)
- Phase 1 (Subsystem De-bloat):
  * Decommission Arrow Flight RPC server and client (flight_server.py, FlightRpcClient.java)
  * Remove gRPC and Arrow dependencies from pom.xml
  * Introduce QuantSidecarClient for direct HTTP REST JSON and Parquet/DuckDB IPC
  * Update architecture documentation in docs/01-CORE-NODE.md and docs/02-QUANT-SIDECAR.md

- Phase 2 (Mobile & Offline Sync):
  * Redesign PortfolioGlanceWidget with Material 3 status pill and live balance
  * Add PortfolioSyncWorker using Android WorkManager for periodic background synchronization
  * Implement 36-hour disconnection notification latch with deduplication to prevent alert spam
  * Add Quiet Mode privacy masking to DashboardScreen and Glance widget

- Phase 3 (Copilot & Agent Tools):
  * Wire simulateTrade in PortfolioQueryTools to live DuckDB nav_history (zero estimation policy)
  * Return INVALID_PARAM refusal when neither price nor live NAV is available
  * Add provenance tagging (price_source, is_price_estimated) and visual badging in UI

- Phase 4 (Quant Engine & Policy Configuration):
  * Implement Linear Confidence Ramp (w_ramp = min(1.0, N / 750)) in analytics_engine.py
  * Add regime-conditional block bootstrap (EXPANSION_RISK_OFF, ACCUMULATION_RISK_ON)
  * Create backtest_allocations.py CLI with multi-tier rebalancing and Sec 112A tax drag accounting
  * Configure verified legacy liquidation candidates in bucket_targets.yaml
  * Enforce strict ISIN-based non-harvestable defense-in-depth guard for Kotak Equal Weight (INF174KA1TY2)